--- a/src/main/resources/static/css/estilos.css
+++ b/src/main/resources/static/css/estilos.css
@@ -46,7 +46,7 @@
     left:0%;
     height: 81%;
     width: 20%;
-    background-color: aliceblue;
+    background-color: yellow;
     color: black;
 }
 
@@ -61,13 +61,13 @@
     overflow: auto;
 }
 
-#piePgina {
+#piePagina {
     position: absolute;
     bottom: 0%;
-    left:0;
+    left:0%;
     height: 7%;
     width: 100%;
-    background-color: #8fc6ff;
+    background-color: green;
     color: black;
     text-align: center;
 }
