--- a/src/main/resources/static/css/estilos.css
+++ b/src/main/resources/static/css/estilos.css
@@ -77,9 +77,9 @@
 }
 
 #encabezadotabla {
-    font-sizew: 20px;
+    font-size: 20px;
     background-color: blue;
-    color: yellow;
+    color: white;
 }
 
 
