--- a/src/main/resources/static/css/estilos.css
+++ b/src/main/resources/static/css/estilos.css
@@ -1,5 +1,8 @@
-
-#encabezado{
+*{
+    background-color:  yellow;
+    
+}
+/*#encabezado{
     position: absolute;
     top: 0;
     left:0;
@@ -97,4 +100,4 @@
     background-color:white;
     color: darkblue;
     
-}
+}*/
