--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,33 +3,37 @@
     <head>
         <title>TechShop</title>
         <meta charset="UTF-8">
+        <link href="/css/menu.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
-        <!--<div>Saludos</div>
-        <p th:text="${MensajeSaludo}"></p>-->
-
-        <!--            <h1>Un cliente</h1>
-                    <p> Nombre: <span th:text="${cliente.nombre}"></span></p>
-                    <p> Apellidos: <span th:text="${cliente.apellidos}"></span></p>
-                    <p> correo: <span th:text="${cliente.correo}"></span></p>
-                    <p> Télefono: <span th:text="${cliente.telefono}"></span></p>-->
-
-        <h1>Clientes</h1>
-        <table border="1">
-            <thead>
-            <th>Nombre</th>
-            <th>Apellidos</th>
-            <th>Correo</th>
-            <th>Teléfono</th>
-        </thead> 
-        <tbody>
-            <tr th:each="cliente : ${clientes}">
-                <td th:text="${cliente.nombre}"></td>
-                <td th:text="${cliente.apellidos}"></td>
-                <td th:text="${cliente.correo}"></td>
-                <td th:text="${cliente.telefono}"></td>
-            </tr>
-        </tbody>
-    </table>
-</body>
+        <header th:replace = "layout/plantilla :: header" />      
+        <h2>Nuestros Articulos</h2>
+        <a th:href="@{/nuevoCliente}">Nuevo Cliente</a> <!--@ ruta .. Crear un nuevo cliente en la tabla con algun metodo-->
+        </br>
+        <div th:if="${clientes != null and !clientes.empty}">
+            <table border="1">
+                <thead>
+                <th>Nombre</th>
+                <th>Apellidos</th>
+                <th>Correo</th>
+                <th>Teléfono</th>
+                 <th colspan="2">Acciones</th>
+                </thead> 
+                <tbody>
+                    <tr th:each="cliente : ${clientes}">
+                        <td th:text="${cliente.nombre}"></td>
+                        <td th:text="${cliente.apellidos}"></td>
+                        <td th:text="${cliente.correo}"></td>
+                        <td th:text="${cliente.telefono}"></td>
+                        <td><a th:href="@{modificarCliente/} + ${cliente.idCliente}">Modificar</a></td>
+                        <td><a th:href="@{eliminarCliente/} + ${cliente.idCliente}">Delete</a></td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+        <div th:if="${clientes == null or clientes.empty}">
+            La lista de clientes esta vacia...
+        </div>
+        <footer th:replace="layout/plantilla :: footer"/>
+    </body>
 </html>
