--- a/src/main/resources/templates/categoria/listado.html
+++ b/src/main/resources/templates/categoria/listado.html
@@ -1,15 +1,37 @@
-<!DOCTYPE html>
-<!--
-Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
-Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this template
--->
-<html>
+<html xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/xhtml">
     <head>
-        <title>TODO supply a title</title>
+        <title>TechShop</title>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+            <link href="/css/menu.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
-        <div>TODO write content</div>
+        <header th:replace = "layout/plantilla :: header" />
+        <div class="contenido">
+            <div class="contenido">
+                <h2>Listado de Categoria</h2>
+                <a th:href="@{/categoria/nueva}">Nuevo Articulo</a> <!--@ ruta .. Crear un nuevo cliente en la tabla con algun metodo-->
+                </br>
+                <div th:if="${categorias != null and !articulos.empty}">
+                    <table border="1">
+                        <thead>
+                            <tr>
+                                <th>Descripcion</th>
+                                <th>Activa</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr th:each="categoria : ${categorias}">
+                                <td th:text="${categoria.descripcion}"></td>
+                                <td><input type="checkbox" name="activa" th:checked="${categoria.activo}" disabled="true"></td>
+                                <td><a th:href="@{/categoria/eliminar/} + ${categoria.idCategoria}">Delete</a></td>
+                                <td><a th:href="@{/categoria/modificar/} + ${articulo.idCategoria}">Modificar</a></td>
+                        </tbody>
+                    </table>
+                </div>
+                <div th:if="${articulos == null or carticulos.empty}">
+                    La lista de categoria esta vacia...
+                </div> 
+            </div>
+            <footer th:replace="layout/plantilla :: footer"/>
     </body>
 </html>
