--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <link href="/css/menu.css" rel="stylesheet" type="text/css"/>
     </head>
-    <body>
+    <body class="contenido">
         <header th:replace = "layout/plantilla :: header" />      
         <h2>Nuestros Articulos</h2>
         <a th:href="@{/nuevoCliente}">Nuevo Cliente</a> <!--@ ruta .. Crear un nuevo cliente en la tabla con algun metodo-->
