--- a/src/main/resources/templates/categoria/modificar.html
+++ b/src/main/resources/templates/categoria/modificar.html
@@ -1,15 +1,33 @@
 <!DOCTYPE html>
-<!--
-Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
-Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this template
--->
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
     <head>
-        <title>TODO supply a title</title>
+        <title>TechShop</title>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="/css/menu.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
-        <div>TODO write content</div>
+        <header th:replace = "layout/plantilla :: header" />
+        <div class="contenido">
+            <h2>Datos del Cliente</h2>
+            </br>
+            <a th:href="@{/categoria/listado}">Regresar</a>
+            </br>
+            </br>
+            <form th:action="@{/categoria/guardar}"
+                  method="POST"
+                  th:object="${categoria}">
+                <input type="hidden" name="idCategoria" th:field="*{idCategoria}"/> <!-- tener un id oculto para identificar datos en la tabla--> 
+                <label for="descripcion">Descripcion</label></br>
+                <input type="text" name="descripcion" th:field="*{descripcion}"/>
+                </br>
+
+                <label for="activo">Activo:</label></br>
+                <input type="checkbox" name="activo" th:field="*{activo}"/></br></br>
+
+                <input type="submit" name="guardar" value="Guardar"/></br>
+            </form>
+        </div>
+
+        <footer th:replace="layout/plantilla :: footer"/>
     </body>
 </html>
