Seguridad; messages.properties

--- a/src/main/resources/templates/categoria/modificar.html
+++ b/src/main/resources/templates/categoria/modificar.html
@@ -8,23 +8,23 @@
     <body>
         <header th:replace = "layout/plantilla :: header" />
         <div class="contenido">
-            <h2>Datos del Cliente</h2>
+            <h2 th:text="#{categoria.datos}">Datos del Categoria</h2>
             </br>
-            <a th:href="@{/categoria/listado}">Regresar</a>
+            <a th:href="@{/categoria/listado}"th:text="#{accion.regresar}">Regresar</a>
             </br>
             </br>
             <form th:action="@{/categoria/guardar}"
                   method="POST"
                   th:object="${categoria}">
                 <input type="hidden" name="idCategoria" th:field="*{idCategoria}"/> <!-- tener un id oculto para identificar datos en la tabla--> 
-                <label for="descripcion">Descripcion</label></br>
+                <label for="descripcion" th:text="#{categoria.descripcion}">Descripcion</label></br>
                 <input type="text" name="descripcion" th:field="*{descripcion}"/>
                 </br>
 
-                <label for="activo">Activo:</label></br>
+                <label for="activo" th:text="#{categoria.activo}">Activo:</label></br>
                 <input type="checkbox" name="activo" th:field="*{activo}"/></br></br>
 
-                <input type="submit" name="guardar" value="Guardar"/></br>
+                <input type="submit" name="guardar" th:value="#{accion.guardar}"/></br>
             </form>
         </div>
 
