--- a/src/main/resources/static/css/menu.css
+++ b/src/main/resources/static/css/menu.css
@@ -66,6 +66,7 @@
 
 
 .footer {
+    position: absolute;
     background-color: black;
     text-align: center;
     color: white;
@@ -83,6 +84,7 @@
     bottom: 0;
     left: 0;
     width: 100%;
+    padding-left: 20px;
     overflow: auto;
 }
 
