--- a/src/main/resources/templates/articulo/listado.html
+++ b/src/main/resources/templates/articulo/listado.html
@@ -3,41 +3,44 @@
     <head>
         <title>TechShop</title>
         <meta charset="UTF-8">
-        <link href="/css/menu.css" rel="stylesheet" type="text/css"/>
+            <link href="/css/menu.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
         <header th:replace = "layout/plantilla :: header" />
         <div class="contenido">
-            <h2>Listado de CLientes</h2>
-            <a th:href="@{/articuloCliente}">Nuevo Articulo</a> <!--@ ruta .. Crear un nuevo cliente en la tabla con algun metodo-->
+            <h2 th:text="#{articulo.titulo}">Listado de Artículos</h2>
+            </br>
+            <a th:href="@{/articulo/nuevo}" th:text="#{articulo.nuevo}">Nuevo Articulo</a> <!--@ ruta .. Crear un nuevo cliente en la tabla con algun metodo-->
+            </br>
             </br>
             <div th:if="${articulos != null and !articulos.empty}">
                 <table border="1">
                     <thead>
                         <tr>
-
-                    <th>Descripcion</th>
-                    <th>Precio</th>
-                    <th>Existencias</th>
-                    <th>Activa</th>
-                    </tr>
+                            <th th:text="#{articulo.descripcion}">Descripcion</th>
+                            <th th:text="#{articulo.precio}">Precio</th>
+                            <th th:text="#{articulo.existencias}">Existencias</th>
+                            <th th:text="#{articulo.activo}">Activa</th>
+                        </tr>
                     </thead> 
                     <tbody>
-                        <tr th:each="articulo : ${articuloss}">
+                        <tr th:each="articulo : ${articulos}">
                             <td th:text="${articulo.descripcion}"></td>
                             <td th:text="${#numbers.formatDecimal(articulo.precio, 3, 2)}" style="text-align: right"></td>
                             <td th:text="${articulo.existencias}" style="text-align: center"></td>
                             <td><input type="checkbox" name="activa" th:checked="${articulo.activo}"¨disabled="true"></td>
-                            <td><a th:href="@{/articulo/eliminar/} + ${articulo.idArticulo}">Delete</a></td>
-                            <td><a th:href="@{/articulo/modificar/} + ${articulo.idCArticulo}">Modificar</a></td>
+                            <td><a th:href="@{/articulo/eliminar/} + ${articulo.idArticulo}" th:text="#{accion.eliminar}">Eliminar</a></td>
+                            <td><a th:href="@{/articulo/modificar/} + ${articulo.idArticulo}" th:text="#{accion.actualizar}">Modificar</a></td>
                         </tr>
                     </tbody>
                 </table>
             </div>
-            <div th:if="${articulos == null or carticulos.empty}">
-                La lista de articulos esta vacia...
-            </div> 
+            <div th:if="${articulos == null or articulos.empty}">
+                <p th:text="#{articulo.no_mostrar}"> No hay Articulos  </p>
+            </div>  
         </div>
-        <footer th:replace="layout/plantilla :: footer"/>
+        <div>
+            <footer th:replace="layout/plantilla :: footer"/>
+        </div>
     </body>
 </html>
