--- a/src/main/resources/templates/articulo/modificar.html
+++ b/src/main/resources/templates/articulo/modificar.html
@@ -3,42 +3,42 @@
     <head>
         <title>TechShop</title>
         <meta charset="UTF-8">
-        <link href="/css/menu.css" rel="stylesheet" type="text/css"/>
+            <link href="/css/menu.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
         <header th:replace = "layout/plantilla :: header" />
         <div class="contenido">
-            <h2>Articulos</h2>
+            <h2 th:text="#{articulo.titulo}" >Articulos</h2>
             </br>
-            <a th:href="@{/articulo/listado}">Regresar</a>
+            <a th:href="@{/articulo/listado}" th:text="#{accion.regresar}">Regresar</a>
             </br>
             </br>
             <form th:action="@{/articulo/guardar}"
                   method="POST"
                   th:object="${articulo}">
                 <input type="hidden" name="idArticulo" th:field="*{idArticulo}"/> <!-- tener un id oculto para identificar datos en la tabla--> 
-                <label for="categoria">Categoria</label></br>
+                <label for="categoria" th:text="#{articulo.categoria}">Categoria</label></br>
                 <select th:field="*{idCategoria}">
                     <option th:each="categoria: ${categorias}"
                             th:value="${categoria.idCategoria}"
-                            th:text="${categoria.detalle}"/>
+                            th:text="${categoria.descripcion}"/>
                 </select><br/>
-                <label for="detalle">Descripcion:</label>
-                <input type="text" name="detalle" th:field="*{detalle}"/><br/>
+                <label for="detalle" th:text="#{articulo.descripcion}">Descripcion:</label>
+                <input type="text" name="descripcion" th:field="*{descripcion}"/><br/>
 
-                <label for="detalle">Detalle:</label>
+                <label for="detalle" th:text="#{articulo.detalle}">Detalle:</label>
                 <textarea name="detalle" th:field="*{detalle}" rows="6" cols="50"/><br/>
 
-                <label for="precio">Precio:</label>
+                <label for="precio" th:text="#{articulo.precio}">Precio:</label>
                 <input type="number" name="precio" th:field="*{precio}"/><br/>
 
-                <label for="existencias">Existencias:</label>
+                <label for="existencias" th:text="#{articulo.existencias}">Existencias:</label>
                 <input type="number" name="existencias" th:field="*{existencias}"/><br/>
 
-                <label for="activo">Activo:</label>
+                <label for="activo" th:text="#{articulo.activo}">Activo:</label>
                 <input type="checkbox" name="activo" th:field="*{activo}"/><br/>
 
-                <input type="submit" name="guardar" value="Guardar"/>
+                <input type="submit" name="guardar" th:value="#{accion.guardar}"/>
             </form>
         </div>
 
