--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,39 +1,41 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns="http://www.w3.org/1999/xhtml">
     <head>
         <title>TechShop</title>
         <meta charset="UTF-8">
-        <link href="/css/menu.css" rel="stylesheet" type="text/css"/>
+            <link href="/css/menu.css" rel="stylesheet" type="text/css"/>
     </head>
-    <body class="contenido">
-        <header th:replace = "layout/plantilla :: header" />      
-        <h2>Nuestros Articulos</h2>
-        <a th:href="@{/nuevoCliente}">Nuevo Cliente</a> <!--@ ruta .. Crear un nuevo cliente en la tabla con algun metodo-->
-        </br>
-        <div th:if="${clientes != null and !clientes.empty}">
-            <table border="1">
-                <thead>
-                <th>Nombre</th>
-                <th>Apellidos</th>
-                <th>Correo</th>
-                <th>Teléfono</th>
-                 <th colspan="2">Acciones</th>
-                </thead> 
-                <tbody>
-                    <tr th:each="cliente : ${clientes}">
-                        <td th:text="${cliente.nombre}"></td>
-                        <td th:text="${cliente.apellidos}"></td>
-                        <td th:text="${cliente.correo}"></td>
-                        <td th:text="${cliente.telefono}"></td>
-                        <td><a th:href="@{modificarCliente/} + ${cliente.idCliente}">Modificar</a></td>
-                        <td><a th:href="@{eliminarCliente/} + ${cliente.idCliente}">Delete</a></td>
-                    </tr>
-                </tbody>
-            </table>
+    <body> 
+        <header th:replace = "layout/plantilla :: header" />
+        <div class="contenido">
+            <tr>
+                <h2 th:text="#{index.titulo}">Articulos Disponibles</h2>
+                </br>
+                <div th:if="${articulos != null and !articulos.empty}">
+                    <table border="1">
+                        <thead>
+                            <tr>
+                                <th th:text="#{articulo.descripcion}">Descripcion</th>
+                                <th th:text="#{articulo.precio}">Precio</th>
+                                <th th:text="#{articulo.comprar}">Acciones</th>
+                            </tr>
+                        </thead> 
+                        <tbody>
+                            <tr th:each="articulo : ${articulos}">
+                                <td th:text="${articulo.descripcion}"></td>
+                                <td th:text="${#numbers.formatDecimal(articulo.precio, 3, 2)}" style="text-align: right"></td>
+                                <td><a th:href="@{/carrito/agregar/} + ${articulo.idArticulo}" th:text="#{accion.agregar}">Agregar</a></td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+                <div th:if="${articulos == null or articulos.empty}">
+                    <p th:text="#{articulo.no_mostrar}"> No hay Articulos  </p>
+               </div> 
         </div>
-        <div th:if="${clientes == null or clientes.empty}">
-            La lista de clientes esta vacia...
-        </div>
+        <div>
         <footer th:replace="layout/plantilla :: footer"/>
+        </div>
     </body>
 </html>
